@@ -1,5 +1,11 @@
 2009-06-26  Florent Lamiraux  <florent@laas.fr>
 
+	Add a macro to look for boost numeric bindings.
+	* CMakeLists.txt: Call the macro
+	* CMakeModules/FindBoostNumericBindings.cmake: New.
+
+2009-06-26  Florent Lamiraux  <florent@laas.fr>
+
 	Remove obsolete headers.
 	* include/MatrixAbstractLayer/abstract.h: Remove.
 	* include/MatrixAbstractLayer/abstractMatrix.h: Remove.
